Update loss functions

--- a/hw5/sac/environment.yml
+++ b/hw5/sac/environment.yml
@@ -6,5 +6,5 @@ dependencies:
         - gym
         - numpy
         - tensorflow-gpu
-        - tensorflow-probability
+        - tensorflow-probability==0.4
         - seaborn
